--- a/index.html
+++ b/index.html
@@ -1,1 +1,133 @@
+<html>
+  <style>
+    body {
+  margin: 0px;
+}
+canvas {
+  background: #232323;
+}
+  </style>
+  <body>
+<canvas id="canvas"></canvas>
+  <script>
+    var canvas = document.getElementById("canvas"),
+      ctx = canvas.getContext('2d');
+    var colorIndex = 0; // Index for cycling through colors
+    var colorChangeSpeed = 0.1; // Speed of color change
+    var lineColorInterval; // Interval for updating line color
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
 
+    var stars = [], // Array that contains the stars
+      FPS = 60, // Frames per second
+      x = 100, // Number of stars
+      mouse = {
+        x: 0,
+        y: 0
+      }; // mouse location
+
+    // Push stars to array
+
+    for (var i = 0; i < x; i++) {
+      stars.push({
+        x: Math.random() * canvas.width,
+        y: Math.random() * canvas.height,
+        radius: 3,
+        vx: Math.floor(Math.random() * 50) - 25,
+        vy: Math.floor(Math.random() * 50) - 25
+      });
+    }
+
+    // Draw the scene
+
+    function draw() {
+      ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+      ctx.globalCompositeOperation = "lighter";
+
+      for (var i = 0, x = stars.length; i < x; i++) {
+        var s = stars[i];
+
+        ctx.fillStyle = "#fff";
+        ctx.beginPath();
+        ctx.arc(s.x, s.y, s.radius, 0, 2 * Math.PI);
+        ctx.fill();
+        ctx.fillStyle = 'black';
+        ctx.stroke();
+      }
+
+      ctx.beginPath();
+      for (var i = 0, x = stars.length; i < x; i++) {
+        var starI = stars[i];
+        ctx.moveTo(starI.x, starI.y);
+        if (distance(mouse, starI) < 150) ctx.lineTo(mouse.x, mouse.y);
+        for (var j = 0, x = stars.length; j < x; j++) {
+          var starII = stars[j];
+          if (distance(starI, starII) < 150) {
+            ctx.lineTo(starII.x, starII.y);
+          }
+        }
+      }
+      // Update line color
+      var colors = generateColors(100); // Generate an array of colors
+      colorIndex += colorChangeSpeed;
+      if (colorIndex >= colors.length) colorIndex = 0; // Loop back to the beginning
+      ctx.lineWidth = 2;
+      ctx.strokeStyle = colors[Math.floor(colorIndex)];
+      ctx.stroke();
+    }
+
+    function generateColors(count) {
+      var colors = [];
+      for (var i = 0; i < count; i++) {
+        var hue = (i / count) * 360;
+        colors.push(`hsl(${hue}, 100%, 50%)`); // HSL color representation
+      }
+      return colors;
+    }
+
+    function distance(point1, point2) {
+      var xs = 0;
+      var ys = 0;
+
+      xs = point2.x - point1.x;
+      xs = xs * xs;
+
+      ys = point2.y - point1.y;
+      ys = ys * ys;
+
+      return Math.sqrt(xs + ys);
+    }
+
+    // Update star locations
+
+    function update() {
+      for (var i = 0, x = stars.length; i < x; i++) {
+        var s = stars[i];
+
+        s.x += s.vx / FPS;
+        s.y += s.vy / FPS;
+
+        if (s.x < 0 || s.x > canvas.width) s.vx = -s.vx;
+        if (s.y < 0 || s.y > canvas.height) s.vy = -s.vy;
+      }
+    }
+
+    canvas.addEventListener('mousemove', function(e) {
+      mouse.x = e.clientX;
+      mouse.y = e.clientY;
+    });
+
+    // Update and draw
+
+    function tick() {
+      draw();
+      update();
+      requestAnimationFrame(tick);
+    }
+
+    // Start the animation loop
+    tick();
+  </script>
+  </body>
+</html>
