--- a/index.html
+++ b/index.html
@@ -66,6 +66,8 @@ canvas {
         <li class="line">I'm 17</li>
         <li class="line">I know how to code a lot</li>
         <li class="line">I make games</li>
+      <li class="line">I also make star glitchers</li>
+
         <p class="para">thats it not much else</p>
         <p class="para">talk to me and I'll talk </p>
     </div>
