--- a/index.html
+++ b/index.html
@@ -91,6 +91,8 @@ canvas {
       padding: 10px 20px;
       font-size: 18px;
       cursor: pointer;
+      border:0px;
+      border-radius:10px;
     }
   </style>
   <body>
