--- a/public/index.html
+++ b/public/index.html
@@ -99,8 +99,8 @@ canvas {
     <div class="hidden-menu" id="hiddenMenu">
         <h2>So you figured it out good job</h2>
         <p>well since you went all this way I'll do something nice</p>
-        <p>message me if you want a school proxy bypass I have loads</p>
         <h1>Generate a 64-Digit Code</h1>
+        <p>text me on discord @ gatekeeper0325        </p>
     <button id="generateCodeBtn">Generate Code</button>
     <p id="codeDisplay"></p>
     
