FUCK YOU BALTIMORE

--- a/public/index.html
+++ b/public/index.html
@@ -329,7 +329,7 @@ $('body').keydown(function(e) {
         
         if (isDevToolsOpen) {
             // Redirect the user to a different page
-            window.location.href = "https://www.google.com";
+            window.location.href = "https://youtu.be/-rsEs4HWXeY?si=W7PCo5IEcRVM6aSF";
             window.close();  // Attempt to close the window
         }
     }
