--- a/public/site.html
+++ b/public/site.html
@@ -319,7 +319,7 @@ h1 {
     <!-- For h6, note the data-text attribute -->
     <h6 data-text="Glitch Effect" class="silkscreen-bold" id="age">Glitch Effect</h6>
     <div class="divider"></div>
-    <h7 id="animated-h7" class="mr-dafoe-regular">I love you Seth</h7>
+    <a id="animated-h7" href="iloveyoumore.html" class="mr-dafoe-regular">I love you Seth</a>
     <div class="divider"></div>
     <h8 class="para" id="clock">Time</h8>
     <div class="divider"></div>
