--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
 </html>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-  $.get("sys.html", function(data){
+  $.get("portfolio.html", function(data){
       $("body").append(data);
   });
   });
